# Curso_AyPSE_ESE

./: README.md
documentación/: guia_de_estilo.md
firmware/: AyPSE.code-workspace  README.md
firmware/apps/0_blinking/: CMakeLists.txt  README.md  sdkconfig
firmware/apps/0_blinking/main/: 0_blinking.c
firmware/apps/0_test_runner/: README.md
firmware/apps/x_template/: CMakeLists.txt  sdkconfig
firmware/board_support/: CMakeLists.txt  README.md
firmware/board_support/inc/: bno086.h  bno086_define.h  led.h  template_bsp.h
firmware/board_support/src/: bno086.c  led.c  template_bsp.c
firmware/drivers_hal/: CMakeLists.txt  README.md
firmware/drivers_hal/inc/: gpio_hal.h  hal_bno086.h  template_hal.h
firmware/drivers_hal/src/: gpio_hal.c  hal_bno086.c  template_hal.c
firmware/middleware/: CMakeLists.txt  README.md
firmware/middleware/inc/: animation.h
firmware/middleware/src/: animation.c
firmware/test_app/: CMakeLists.txt
firmware/test_app/main/: CMakeLists.txt
firmware/test_app/test/: CMakeLists.txt
